--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/pthulen/flyfishquotes#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "errorhandler": "^1.5.1",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1",
+    "sqlite3": "^4.1.1"
   }
 }
